# crawler_platform

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  PROJECT.md  README.md  build.sh  docker-compose.yml
backend-api/: .env.example  Cargo.toml  Dockerfile  deny.toml
backend-api/src/: config.rs  main.rs  state.rs  worker.rs
backend-api/src/api/: arxiv.rs  crawl.rs  exploration.rs  general.rs  mod.rs  podcast.rs  search.rs  storage.rs
backend-api/src/middleware/: auth.rs
backend-api/src/services/: crawler.rs  crawler_repro_test.rs  mod.rs  queue.rs  s3.rs
crawl/: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  lab_crawl_docs.md
crawl/readability/: .cargo_vcs_info.json  Cargo.toml
crawl/readability/src/: error.rs  extractor.rs  lib.rs  scorer.rs
crawl/src/: config.rs  crawler.rs  errors.rs  lib.rs  main.rs  python_binding.rs  user_agents.rs  utils.rs
crawl/src/strategies/: agent.rs  browser.rs  http.rs  markdown.rs  mod.rs  stealth.rs
crawl/test/: benchmark_crawl.py  test_agent.py  test_binding.py  test_concurrency.py  test_errors.py  test_lite.py  test_magic.py  test_optimization.py
docs/: postgresql_schema.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ConfirmModal.jsx  DashboardTabs.jsx  DataStorage.jsx  Header.jsx  Layout.jsx  MetricsPanel.jsx  SearchAggregator.jsx  StrategyModal.jsx  TaskForm.jsx  TaskList.jsx
rustfs/: .gitignore  Cargo.toml  Dockerfile  download_bucket.sh
rustfs/src/: main.rs
