[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"
tower = { version = "0.4", features = ["util", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "1.4"
quick-xml = { version = "0.31", features = ["serialize"] }
tempfile = "3.9"
md5 = "0.7"
regex = "1.12.2"
url = "2.5.8"
bytes = "1.11.0"
futures = "0.3.31"
html2text = "0.16.5"
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-redis = "0.18"
backon = "1"
